<resources>
    <string name="app_name">GhostBusters</string>
    <string name="flashlight">Flashlight</string>
    <string name="title">Ghost Busters</string>
    <string name="multi_player">Multiplayer</string>
    <string name="single_Player">Single Player</string>
    <string name="about_text">About</string>
    <string name="about">

        How it works:
        Ghosts have haunted campus!
        Get on your feet and capture them using the flashlight button on your screen when they pop up on your screen!

    </string>

    <string name="multiPlayer">
        Coming Soon!
    </string>

    <string name="about_title_text">Ghost Busters</string>
    <string name="ok">OK</string>
    <string name="again">play again</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps2">Map</string>
    <string name="timer">00:00</string>
    <string name="ghostgoal">0</string>
    <string name="highscore_1">00:00:00</string>
    <string name="highscore_2">00:00:00</string>
    <string name="highscore_3">00:00:00</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>


</resources>
