<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".ScoreboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Scoreboard"
            android:gravity="center|top"
            android:textSize="50dp"
            android:textColor="@color/redThirty"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. "
                android:textSize="30dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highscore_1"
                android:textSize="30dp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. "
                android:textSize="30dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highscore_2"
                android:textSize="30dp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3. "
                android:textSize="30dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highscore_3"
                android:textSize="30dp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/playAgain_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_again"
                android:background="@android:color/holo_green_dark"
                android:layout_margin="50dp"/>

            <Button
                android:id="@+id/exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:background="@android:color/holo_red_dark"
                android:layout_margin="50dp"/>


        </LinearLayout>


    </LinearLayout>





</android.support.constraint.ConstraintLayout>